# cpp-opengl-renderer

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.py  build.sh  build_debug.sh  clean_build.sh  test_all.sh
src/: camera.hpp  corner_wedge_outer.hpp  cylinder.hpp  error.hpp  file.hpp  file_obj.hpp  game_map.hpp  input_manager.hpp  light.hpp  light_manager.hpp  main.cpp  mesh.hpp  movement.hpp  object.hpp  quad.hpp  scene.hpp  shader_program.hpp  stb_image.h  texture.hpp  tiny_obj_loader.hpp  window_manager.hpp
src/objs/quad/: quad.mtl
src/shaders/: depth_cubemap.frag  depth_cubemap.vert  phong.frag  phong.vert  shadow.frag  shadow.vert
src/shapes/: box.hpp  corner_wedge_inner.hpp  icosphere.hpp  wedge.hpp
